[FIX] account_reports: prevent overflow in general ledger
Steps to reproduce
==================

- In the accounting app, go to 'Journal Entries'.
- Create a new entry.
- Set the 'reference' field to 'Receipt'.
- Add 2 accounts in Journal Items.
- For the 1st account, select 'Account Receivable' (e.g., 121000 Account Receivable).
- Set the Partner field to "0h3n-abcdefg@yahoo.example.com" and the label field to "Online transfer reced agst INV-00171, Dt:01.08.2024".
- For the 2nd account, set it to any other type, such as "101401 Bank".
- Add a credit amount in the 'Account Receivable' and the same amount in the 2nd account.
- Save and post the transaction.
- Navigate to the general ledger.
- Ensure you expand the list of this newly created account move under the 121000 Account Receivable to observe overlapping text.
- Click on 'PDF' and print the report.
- Notice the overlapping text.

Cause of the issue
==================

The o_overflow_value class is only applied when the cell value length is
longer than 65 chars

opw-4130917

closes odoo/enterprise#70229

X-original-commit: fadd83614219445505a35cbb42176f320838402d

--- a/account_reports/static/src/scss/account_pdf_export_template.scss
+++ b/account_reports/static/src/scss/account_pdf_export_template.scss
@@ -122,7 +122,7 @@
 
 .o_overflow_value {
     display: inline-block;
-    width: 350px;
+    max-width: 350px;
     white-space: normal !important;
     overflow-wrap: break-word;
 }
